--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 		<meta charset="UTF-8">
 		<title>Sundial</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href='http://fonts.googleapis.com/css?family=Exo:100' rel='stylesheet' type='text/css'>
+		<!--<link href='http://fonts.googleapis.com/css?family=Exo:100' rel='stylesheet' type='text/css'>-->
 		<link rel="icon" type="image/png" href="img/icon.png">
 		<meta description="Sundial is a MIT licensed simple graphical implementation of Vladimir Agafonkin (@mourner)'s Suncalc library, using KineticJS, and MomentJS.
 Created by Duncan Trevithick (@dunctk).">
 	</head>
-	<body>
+	<body style="direction:rtl;">
 		<div id="container"></div>
 		<script type="text/javascript" src="kinetic-v4.7.2.min.js"></script>
 		<script type="text/javascript" src="moment.min.js"></script>
 		<script type="text/javascript" src="suncalc.js"></script>
+		<script type="text/javascript" src="PrayTimes.js"></script>
+		<script type="text/javascript" src="show-prayer-time.js"></script>
 		<script type="text/javascript" src="sundial.js"></script>
+		
+		
 
 		<div id="footer">
 			<ul id="footer-credits">
